# mppp

./: .clang-tidy  .gitchangelog.rc  .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  YACMACompilerLinkerSettings.cmake  appveyor.yml  benchmarks.html  changelog.html  codecov.yml  complex.html  complex128.html  concepts.html  config.hpp.in  configuration.html  definitions.html  environment.yml  exceptions.html  fwd_decl.html  genindex.html  index.html  installation.html  integer.html  integer_benchmarks.html  interactive_notebooks.html  mp++-config.cmake.in  mp_integer.html  namespaces.html  objects.inv  rational.html  real.html  real128.html  reference.html  search.html  searchindex.js  tutorial.html  tutorial_api.html  tutorial_boost_s11n.html  (+15 more)
.circleci/: config.yml
.github/workflows/: gh_actions_ci.yml
_sources/: benchmarks.rst.txt  benchmarks.txt  changelog.rst  changelog.rst.txt  complex.rst  complex.rst.txt  complex128.rst  complex128.rst.txt  concepts.rst.txt  configuration.rst.txt  definitions.rst  definitions.rst.txt  exceptions.txt  fwd_decl.rst  index.rst  index.rst.txt  index.txt  installation.rst  installation.rst.txt  installation.txt  integer.rst  integer.rst.txt  integer_benchmarks.rst.txt  interactive_notebooks.rst  mp_integer.txt  namespaces.rst  namespaces.rst.txt  rational.rst  rational.rst.txt  real.rst.txt  real128.rst.txt  reference.rst  reference.rst.txt  tutorial.rst  tutorial.rst.txt  tutorial_commonops.rst.txt  tutorial_complex.rst  tutorial_complex128.rst  tutorial_constr.rst.txt  tutorial_integer.rst  (+12 more)
_sources/notebooks/: integer_arithmetic.ipynb  integer_basics.ipynb.txt  integer_comparison.ipynb.txt
_static/: documentation_options.js  pyramid.css
benchmark/: CMakeLists.txt  bench_add_1.cpp  bench_add_2.cpp  bench_add_3.cpp  bench_addmul_1.cpp  bench_addmul_2.cpp  bench_addmul_3.cpp  bench_arith.cpp  bench_arith_1.cpp  bench_arith_2.cpp  bench_arith_3.cpp  bench_cmp_1.cpp  bench_cmp_2.cpp  bench_cmp_3.cpp  bench_construction_1.cpp  bench_construction_2.cpp  bench_construction_3.cpp  bench_constructors.cpp  bench_conversion_1.cpp  bench_conversions.cpp  bench_ctor_dtor_1.cpp  bench_ctor_dtor_2.cpp  bench_ctor_dtor_3.cpp  bench_div_1.cpp  bench_div_2.cpp  bench_div_3.cpp  bench_dot_product_1.cpp  bench_dot_product_2.cpp  bench_dot_product_3.cpp  bench_fp_construction_1.cpp  bench_fp_construction_2.cpp  bench_fp_construction_3.cpp  bench_int_construction_1.cpp  bench_int_construction_2.cpp  bench_int_construction_3.cpp  bench_int_conversion_1.cpp  bench_int_conversion_2.cpp  bench_int_conversion_3.cpp  bench_lshift_1.cpp  bench_lshift_2.cpp  (+59 more)
cmake/: FindARB.cmake  FindArb.cmake  FindDbgHelp.cmake  FindFLINT.cmake  FindGMP.cmake  FindMPFR.cmake  FindQuadmath.cmake  Findmp++_Arb.cmake  Findmp++_FLINT.cmake  Findmp++_GMP.cmake  Findmp++_MPC.cmake  Findmp++_MPFR.cmake  Findmp++_quadmath.cmake
cmake/yacma/: YACMACompilerLinkerSettings.cmake  yacma_thread_local_tests.cpp
doc/: Makefile  benchmarks.rst  changelog.rst  complex.rst  complex128.rst  concepts.rst  conf.py.in  definitions.rst  index.rst  installation.rst  integer.rst  integer_benchmarks.rst  interactive_notebooks.rst  rational.rst  real.rst  real128.rst  reference.rst  tutorial.rst  tutorial_boost_s11n.rst  tutorial_commonops.rst  tutorial_constr.rst  tutorial_integer.rst  tutorial_io.rst  tutorial_numtower.rst  tutorial_pybind11.rst  tutorial_real.rst  tutorial_real128.rst
doc/doxygen/: Doxyfile  Doxyfile.in
include/: mp++.hpp
notebooks/: integer_arithmetic.html  integer_basics.html  integer_bit_fiddling.html  integer_comparison.html  integer_formatted_output.html  integer_s11n.html  real_basics.html
src/: complex.cpp  complex128.cpp  demangle.cpp  integer.cpp  parse_complex.cpp  parse_complex.hpp  rational.cpp  real.cpp  real128.cpp  type_name.cpp
test/: CMakeLists.txt  catch.hpp  catch_main.cpp  complex128_arith.cpp  complex128_basic.cpp  complex128_hyper.cpp  complex128_io.cpp  complex128_literal.cpp  complex128_logexp.cpp  complex128_operators.cpp  complex128_pow.cpp  complex128_roots.cpp  complex128_trig.cpp  complex_agm.cpp  complex_arith.cpp  complex_basic.cpp  complex_cmp.cpp  complex_hyper.cpp  complex_io.cpp  complex_literals.cpp  complex_logexp.cpp  complex_mul_div_2.cpp  complex_operators.cpp  complex_pow.cpp  complex_rootofunity.cpp  complex_roots.cpp  complex_trig.cpp  concepts.cpp  demangle.cpp  global_header.cpp  integer_abs.cpp  integer_add_ui.cpp  integer_addsub_ui.cpp  integer_addsub_ui_si.cpp  integer_arith.cpp  integer_arith_ops.cpp  integer_arith_ops_01.cpp  integer_arith_ops_02.cpp  integer_arith_ops_03.cpp  integer_basic.cpp  (+128 more)
test/pybind11/: CMakeLists.txt  pybind11_test_01.cpp  run_pybind11_test_01.py
tools/: circleci_bionic_clang6.sh  circleci_bionic_clang6_ubsan.sh  circleci_bionic_gcc7_conda.sh  circleci_bionic_gcc7_conda_asan.sh  circleci_bionic_gcc7_conda_coverage.sh  circleci_bionic_gcc7_conda_release.sh  circleci_bionic_gcc7_conda_relwithdebinfo.sh  circleci_bionic_gcc7_conda_ubsan.sh  circleci_bionic_gcc7_coverage.sh  circleci_bionic_gcc7_relwithdebinfo.sh  circleci_conda_arm64.sh  circleci_conda_coverage.sh  circleci_conda_docs.sh  circleci_conda_release.sh  circleci_cosmic_clang7_asan.sh  circleci_cosmic_clang7_conda_tsan.sh  circleci_cosmic_clang7_debuggmp.sh  circleci_cosmic_clang7_debuggmp_unstable.sh  circleci_cosmic_clang7_tsan.sh  circleci_cosmic_gcc8_conda_coverage.sh  circleci_cosmic_gcc8_coverage.sh  circleci_cosmic_gcc8_debuggmp.sh  circleci_cosmic_gcc8_debuggmp_unstable.sh  circleci_focal_clang9_conda_tsan.sh  circleci_focal_clang9_debuggmp.sh  circleci_focal_clang9_debuggmp_unstable.sh  circleci_focal_clang9_msan.sh  circleci_focal_gcc9_conda_coverage.sh  circleci_focal_gcc9_conda_docs.sh  circleci_ubuntu_arm64.sh  circleci_xenial_clang6.sh  gha_bionic_gcc7_conda_asan.sh  gha_bionic_gcc7_conda_ubsan.sh  gha_conda_asan.sh  gha_conda_tsan.sh  gha_conda_ubsan.sh  gha_debuggmp.sh  gha_focal_clang9_conda_tsan.sh  gha_focal_clang9_debuggmp.sh  gha_osx.sh  (+4 more)
tools/sample_project/: CMakeLists.txt  main.cpp
(+79 files in other folders)
